# hhc-n818op-standalone

./: .bandit.yml  .coveragerc  .editorconfig  .env.defaults  .flake8  .gitattributes  .gitignore  .netrc  .pydocstyle.ini  .pylint.toml  Makefile  README.md  README_FR.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: package-release.yml  pr-checks.yml
daemon_hhc_n818op/: __init__.py  hhc_n818op_standalone_d.py  hhc_n818op_standalone_d.yaml
daemon_hhc_n818op/hhc_n818op/: __init__.py  relay_client.py  relay_plugins.py  time_parser.py
docker/: .env.in  Dockerfile  docker-compose.yaml
tests/: test_relay_scenarios.py  test_signal_handling.py
